--- a/Site_Genshin/main.css
+++ b/Site_Genshin/main.css
@@ -114,3 +114,18 @@ section h2,.articles article{
     background-color: #b86e01;
 }
 
+#venti{
+    background-color: #64b450;
+}
+
+#xingqiu{
+    background-color: #5098b4;
+}
+
+#klee{
+    background-color: #e9423c;
+}
+
+#diluc{
+    background-color: #bb201b;
+}
