--- a/testes2/main.css
+++ b/testes2/main.css
@@ -1,21 +1,96 @@
-.container {
-    margin: 20px;
-  }
-  
-  label {
-    display: block;
-    margin-top: 10px;
-  }
-  
-  input {
-    width: 100px;
-  }
-  
-  button {
-    margin-top: 20px;
-  }
-  
-  p {
-    margin-top: 20px;
-  }
-  
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Mogra', cursive;
+}
+
+body{
+  background-color: #e7e7e7;
+  padding-top: 100px;
+}
+
+header{
+  display: flex;
+  align-items: center;
+  padding-bottom: 40px;
+}
+
+header img{
+  height:40px ;
+  margin-right: 20px;
+}
+
+header h1{
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.container{
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+form input{
+  font-size: 20px;
+  background-color: #fff;
+  border: none;
+  border-bottom: 2px solid #000;
+}
+
+form{
+  display: flex;
+  max-width: 640px;
+  width: 100%;
+  justify-content: space-between;
+
+}
+
+form button{
+  background-color: #009432;
+  color: #fff;
+  font-size: 20px;
+  border: none;
+  cursor: pointer;
+}
+
+table{
+  width: 100%;
+}
+
+table th{
+  padding: 16px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  border-bottom: 4px;
+  border-color: black;
+}
+
+table td{
+  padding: 16px;
+  text-align: center;
+  font-size: 18px;
+  border-bottom: 1px solid rgba(0,0,0, 0.1);
+}
+
+table td img{
+  height: 24px;
+}
+
+.resultado{
+  padding: 8px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #000;
+  border-radius: 3px;
+}
+
+.aprovado{
+  background-color: #009432;
+}
+
+.reprovado{
+  background-color: red;
+}
