--- a/agenda/main.css
+++ b/agenda/main.css
@@ -1,79 +1,79 @@
-/* main.css */
+main.css 
 
-/* Estilos gerais */
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-  }
-  
-  .container {
+}
+
+.container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-  }
-  
-  header {
+}
+
+header {
     text-align: center;
     margin-bottom: 20px;
-  }
-  
-  h1 {
+}
+
+h1 {
     font-family: 'Bungee', cursive;
     font-size: 24px;
     margin-bottom: 10px;
-  }
-  
-  /* Estilos do formulário */
-  #form_contato {
+}
+
+
+#form_contato {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-  }
-  
-  #form_contato input[type="text"] {
+}
+
+#form_contato input[type="text"] {
     margin-bottom: 10px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
-  
-  #form_contato button {
+}
+
+#form_contato button {
     padding: 10px 20px;
-    background-color: #4caf50;
+    background-color: #44db49e0;
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
-  
-  #form_contato button:hover {
+    transition: background-color 1s ease;
+    box-shadow: 0 0 6px black;
+    outline: rgb(4, 4, 78) 1px;
+}
+
+#form_contato button:hover {
     background-color: #45a049;
-  }
-  
-  /* Estilos da tabela */
-  table {
+}
+
+
+table {
     width: 100%;
     border-collapse: collapse;
-  }
-  
-  th, td {
+}
+
+th, td {
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-  }
-  
-  th {
+}
+
+th {
     background-color: #f2f2f2;
-  }
-  
-  /* Estilos específicos da tabela de contatos */
-  #form_contato input[type="text"] {
+}
+
+#form_contato input[type="text"] {
     width: 100%;
-  }
-  
-  #form_contato button {
+}
+
+#form_contato button {
     width: auto;
-  }
-  
-  
+}
