--- a/Site_Honkai/site.css
+++ b/Site_Honkai/site.css
@@ -187,10 +187,48 @@ td span {
     margin-right: 5px;
 }
 
-.section details {
-    background-color: #f2f2f2;
-    color: #333;
-    padding: 20px;
-    font-size: 16px;
+nav {
+    background-color: #333;
+    padding: 16px 0;
+    display: none;
 }
 
+nav li{
+    list-style: none;
+    display: inline;
+    margin-right: 16px;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+nav li a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.menu_hamburger{
+    width: 32px;
+    cursor: pointer;
+}
+
+.menu_hamburger span{
+    height: 2px;
+    width: 100%;
+    background-color: #fff;
+    display: block;
+    margin-bottom: 4px;
+}
+
+.social-links img {
+    height: 24px;
+}
+
+.social-links li{
+    display: inline;
+    margin-right: 8px;
+}
+
+.social-links li a {
+    text-decoration: none;
+}
