--- a/Site_Honkai/site.css
+++ b/Site_Honkai/site.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
@@ -14,6 +12,7 @@ header {
 }
 
 h1 {
+    color: #000000;
     margin: 0;
 }
 
@@ -26,7 +25,7 @@ section {
 }
 
 h2 {
-    color: #333;
+    color: #000000;
 }
 
 form {
@@ -36,6 +35,10 @@ form {
 label {
     display: block;
     margin-bottom: 5px;
+}
+
+h3 {
+    color: #000000;
 }
 
 input,
@@ -97,7 +100,7 @@ tbody td:first-child {
 
   /* Estilizando os links */
 a {
-    color: #000000;
+    color: #ad861b;
     text-decoration: none;
 }
 
@@ -231,4 +234,75 @@ nav li a{
 
 .social-links li a {
     text-decoration: none;
+}
+
+.article-table, .wikitable, .fandom-table, .wikitable.filehistory {
+    border: solid transparent;
+    border-width: 0px 0px 0px 0px;
+    background: #ffffff;
+    border-radius: 5px 5px 5px 5px;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.article-table {
+    text-align: center;
+}
+
+
+.article-table td {
+    text-align: center;
+    vertical-align: middle;
+}
+
+body
+{
+    background-image: url("/Site_Honkai/Art_splash/webp");
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+:root .theme-fandomdesktop-dark, :root .theme-fandommobile-dark{
+
+--color-fire: #e62a29;
+--color-ice: #2192d6;
+--color-imaginary: #e5b909;
+--color-lightning: #b54bd3;
+--color-physical: #71718c;
+--color-quantum: #4f48bd;
+--color-wind: #42c38c;
+--text-highlight: #f29e38;
+--text-new: #41be3a;
+--text-old: #e35045;
+--text-keyword: #dbc291;
+--theme-color-1: #c09c7b;
+--theme-color-2: #e2b892;
+--theme-color-3: #2b272b;
+--pi-dark-bg: var(--theme-color-3);
+--pi-border: var(--theme-color-1);
+--pi-background-color: #2b272b;
+}
+
+.article-table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ccc;
+    font-family: Arial, sans-serif;
+}
+
+.article-table td {
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+
+.article-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.article-table tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.article-table tbody tr:hover {
+    background-color: #eaeaea;
 }
