--- a/Site_Honkai/site.css
+++ b/Site_Honkai/site.css
@@ -316,3 +316,9 @@ nav li a{
 #social{
     margin-left: 720px;
 }
+.colorful-text {
+    color: gold;
+  }
+  #creditos{
+    margin-left: 720px;
+}
