--- a/Site_Honkai/login.css
+++ b/Site_Honkai/login.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    background-image: url(/Site_Honkai/Art_splash/honkai.jpg);
+    background-image: url(../Site_Honkai/Art_splash/honkai.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
