--- a/Site_Honkai/site.css
+++ b/Site_Honkai/site.css
@@ -3,7 +3,7 @@ body {
     background-color: #f2f2f2;
     margin: 0;
     padding: 0;
-    background-image: url("/Site_Honkai/Art_splash/1349658-Honkai-Star-Rail-HD-Wallpaper.jpg");
+    background-image: url("../Site_Honkai/Art_splash/1349658-Honkai-Star-Rail-HD-Wallpaper.jpg");
     background-size: cover;
     background-position: center;
 }
