--- a/Site_Honkai/locais/belobog.css
+++ b/Site_Honkai/locais/belobog.css
@@ -49,7 +49,7 @@ table {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
-    background-image: url(/Site_Honkai/Art_splash/World_Jarilo-VI_Belobog.webp);
+    background-image: url(../Art_splash/World_Jarilo-VI_Belobog.webp);
     margin: 0;
     padding: 0;
     background-size: cover;
