--- a/Site_Honkai/locais/expresso.css
+++ b/Site_Honkai/locais/expresso.css
@@ -49,7 +49,7 @@ table {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
-    background-image: url("/Site_Honkai/Art_splash/loadingstuck-honkaistarail-01.webp");
+    background-image: url("../Art_splash/honkai-star-rail-special-program-world-xianshou-luofu.jpg");
     margin: 0;
     padding: 0;
     background-size:cover;
